implementing rubocop suggestion

--- a/enumerable.arb
+++ b/enumerable.arb
@@ -1,16 +1,19 @@
+# frozen_string_literal:true
+
+# ruby enumerable implemetation
 module Enumerable
-  def my_map (&block)
+  def my_map(&block)
     result = []
-    self.each do |element|
-    result <<
-    block.call(element)
+    each do |element|
+      result <<
+        block.call(element)
     end
     result
   end
 
   def my_select(&block)
     result = []
-    self.each do |element|
+    each do |element|
       result << element if block.call(element) == true
     end
     result
@@ -22,14 +25,14 @@ module Enumerable
       yield self[i]
       i += 1
     end
- end
+  end
 
   def my_any?
     my_each do |item|
       if block_given?
         return true if yield item
-      else
-        return true if item
+      elsif item
+        return true
       end
     end
     false
@@ -47,44 +50,21 @@ module Enumerable
     sum
   end
 
-  def my_none?(arg = nil)
-    if block_given?
-      my_each { |a| return false if yield(a) }
-    elsif arg.nil?
-      my_each { |a| return false if a }
-    elsif arg.instance_of?(Class)
-      my_each { |a| return false if a.class != arg }
-    elsif arg.instance_of?(Regexp)
-      my_each { |a| return false if a =~ arg }
-    else
-      my_each { |a| return false if a != arg }
+  def my_none?
+    my_each do |item|
+      return false if block_given? && yield(item) || !block_given? && item
     end
     true
   end
-  def my_inject(arg = nil)
-    sum = 0
-    while sum < length
-      if arg.nil?
-        sum += 1
-        arg = yield(self[0], self[sum])
-      else
-        arg = yield(arg, self[sum])
-      end
-      sum += 1
+
+  def my_inject(accumulator, &block)
+    each do |element|
+      accumulator = block.call(accumulator, element)
     end
-    arg
+    accumulator
   end
-  def my_inject(arg = nil)
-    sum = 0
-    while sum < length
-      if arg.nil?
-        sum += 1
-        arg = yield(self[0], self[sum])
-      else
-        arg = yield(arg, self[sum])
-      end
-      sum += 1
-    end
-    arg
+
+  def multiply_els(arr)
+    arr.my_inject { |sum, num| sum * num }
   end
 end
